--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+# Improve language detection of repo by ignoring x files.
+*.x -linguist-detectable
+
 # Auto detect text files and perform LF normalization
 * text=auto
 
